--- a/projects/electionanalysis.html
+++ b/projects/electionanalysis.html
@@ -47,9 +47,9 @@
                 <li><strong>Github Repository:</strong> <a href="https://github.com/MarroquinDillan/2020_Presidential_Election_Benford_Analysis_UPDATED" target="_blank">Project Link</a></li>
               </ul>
   
-                <p>Leveraged R, Excel, and SQL to detect for ballot manipulation in the 2020 Presidential Election. The analysis was conducted at the state and county level using Nevada and Washoe County as the subject of reference.</p>
-                <p>Analysis was also conducted using Benford's Law analysis, where I tested the frequency of naturally-occuring leading digits against those of the election results</p>
-                <p>Published findings in my paper “2020 Presidential Election Analysis - Detecting Voter Fraud via Benford's Law”. This is the work I am most proud of.</p>
+                <p>NOTE: This is an updated repository of my <a href="https://github.com/MarroquinDillan/2020_Presidential_Election_Benford_Analysis" target="_blank">"2020_Presidential_Election_Benford_Analysis" </a>conducted in 2021. The reason for this update was to 1) refresh my R Programming skills and 2) clean up my amateur code from when I was still a university student. Below is the original README.md file from that repository:</p>
+                <p>This is a deep statistical data analysis of the 2020 Presidential Race with the aim of detecting for ballot fraud or manipulation. Analysis was conducted at the state and county level with Washoe County of Nevada as the point of reference. Benford's Law analysis using R and SQL was conducted at each level to detect for ballot fraud and manipulation.</p>
+                <p>In this respository you will find the research paper I submitted to my university detailing my analysis, method of analysis, charts, conclusions, and papers referenced. The R Code is also pasted at the bottom of the research paper. The .csv files detailing the election results are also attached. Please feel free to message me if you are curious about the results or would like to do follow up research.</p>
             </div>
           </div>
         </div>
@@ -74,5 +74,3 @@
   
   </body>
   </html>
-  
-  
