--- a/index.html
+++ b/index.html
@@ -568,11 +568,13 @@
             <h4 style="text-align:left;color:#09203a">Professional and Technical Skills</h4>
                 <p style="text-align:left;">
                   <img src="https://www.vectorlogo.zone/logos/r-project/r-project-icon.svg" alt="vectorlogo.zone" height=
-                    "75" width="120">
+                    "75" width="100">
                   <img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg" alt="vectorlogo.zone" height="75" width="120">
                   <img src="https://www.vectorlogo.zone/logos/w3_html5/w3_html5-ar21.svg" alt="vectorlogo.zone" height="75" width="120">
-                  <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/LaTeX_logo.svg" alt="upload.wikimedia.org" height="75" width="120">
-                  <img src="https://raw.githubusercontent.com/gilbarbara/logos/main/logos/tableau.svg" alt="vectorlogo.zone" height="75" width="120">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/LaTeX_logo.svg" alt="upload.wikimedia.org" height="55" width="120">
+                  <img src="https://www.vectorlogo.zone/logos/github/github-ar21.svg" alt="vectorlogo.zone" height="75" width="140">
+                  <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-ar21.svg" alt="vectorlogo.zone" height="75" width="120">
+                  <img src="https://raw.githubusercontent.com/gilbarbara/logos/main/logos/tableau.svg" alt="raw.githubusercontent.com" height="100" width="120">
                 </p>
             </div>
             <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
