--- a/index.html
+++ b/index.html
@@ -468,10 +468,12 @@
       <div class="col-lg-12 d-flex justify-content-center">
         <ul id="portfolio-flters">
           <li data-filter="*" class="filter-active">All</li>
+          <li data-filter=".filter-research">Research Papers</li>
           <li data-filter=".filter-r">R</li>
           <li data-filter=".filter-sql">SQL</li>
           <li data-filter=".filter-tex">TeX</li>
           <li data-filter=".filter-spreadsheets">Spreadsheets</li>
+          <li data-filter=".filter-other">Other</li>
           <li data-filter=".filter-indevelopment">In Development</li>
         </ul>
       </div>
@@ -545,6 +547,30 @@
           <div class="portfolio-info">
             <div class="portfolio-links">
               <a href="projects/climberanalysis.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-other filter-research">
+        <center><h4>Math Art using Hilbert's Space-Filling Curves</h4></center>
+        <div class="portfolio-wrap">
+          <img src="assets/img/project/mathart.png" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <div class="portfolio-links">
+              <a href="projects/mathart.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-other filter-research">
+        <center><h4>Math Anxiety Prevalence Among University Students</h4></center>
+        <div class="portfolio-wrap">
+          <img src="assets/img/project/mathanxiety.jpg" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <div class="portfolio-links">
+              <a href="projects/mathanxiety.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
             </div>
           </div>
         </div>
