--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Certified Data Analyst", "Former Math and Statistics Teacher", "Fingerstyle Guitarist", "Amateur Statistician", "Rock Climber", "STEM Education Advocate"],
+      strings: ["Certified Data Analyst", "Math and Statistics Teacher", "Statistician", "Fingerstyle Guitarist", "Rock Climber", "STEM Education Advocate"],
       loop: true,
       typeSpeed: 40,
       backSpeed: 20
