--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="row">
           <div class="col-lg-6">
             <ul>
-              <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> November 27, 2000</li>
+              <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> November 27th</li>
               <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 (702) 339-5968</li>
             </ul>
           </div>
@@ -188,7 +188,6 @@
   </div><!-- End Interests -->
 </section>
 <!-- End About Section -->
-
 
 
 <!-- ======= Education Section ======= -->
